--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,7 +1,7 @@
 /*+++++++++++++++++++Pied du page-----------------------*/
 footer{
     background: #000;
-    height: 100vh;
+    height: 100%;
 }
 
 .contour-foot{
