--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,17 +10,8 @@ header{
 
 
 
-/* fin style logo fixe */
+/*----------------------countour--------------------*/
 
-/* Fleche */
-/* .contour1{
-    border: 2px solid #BCBBBD;
-    border-top: none;
-    border-bottom: none;
-    width: 86%;
-    margin: 0 auto;
-    padding-bottom: 20%;
-} */
 .contour2{
     border: 2px solid #BCBBBD;
     border-top: none;
@@ -244,14 +235,18 @@ video{
     background: linear-gradient(150deg, #eddebf50, #19587d40);
     width: 100%;
     height: 100vh;
-    visibility: visible;
 }
 
+/*--------Formulaire base-------*/
+
 .type-input{
+    position: absolute;
     display: block;
     width: 50%;
-    height: 140%;
-    margin: 0 auto;
+    height: 100%;
+    left: 50%;
+    margin-top: -23%;
+    transform: translate(-50%,50%);
 }
 
 .type-input h1{
@@ -285,9 +280,6 @@ input{
 
 /* Menu deroulant */
 
-/* .deroulant{
-    width: 40rem;
-} */
 
 .deroulant:hover .deroulant-list{
     opacity: 1;
@@ -310,15 +302,19 @@ input{
     width: 20px;
 }
 
+/*-------------------Menu deroulant----------------------*/
+
 .deroulant-list{
     background: linear-gradient(150deg, #eddebf, #19587d);
     position: absolute;
     top: 0fr;
     opacity: 0;
-    width: 50%;
+    width: 100%;
     visibility: hidden;
     transition: opacity 0.2s linear, visibility 0.2s linear; 
 }
+
+/*-----------------------Style sur liste menu déroulant-------------*/
 
 .list-item{
     padding: 0.4rem;
@@ -384,78 +380,79 @@ input{
 /* Fin style boutton */
 .centre-confirm{
     position: absolute;
-    margin-top: -8%;
-    margin-left: 47%;
+    margin-top: 40%;
+    left: 47%;
     width: 8.5%;
 }
 .centre-confirm button{
     padding: 10px 20px 10px 20px;
     background: linear-gradient(to right,#eddebf40, #89000840);
     border: none;
+    cursor: pointer;
 }
 
 .centre-confirm button:hover{
     background: linear-gradient(to right,#eddebf, #890008);
 }
 
-
-/* .cadre{
+#confirme{
     position: absolute;
-    height: 850px;
-    margin: 0px auto;
-    margin-top: -850px;
-    width: 100%;
+    display: block;
+    width: 50%;
+    height: 90%;
+    left: -150%;
+    margin-top: -64.5%;
+    opacity: 0;
+    background: linear-gradient(150deg, #eddebf, #19587d);;
+    transform: translate(-50%,50%) scale(1.25);
+    border-radius: 50px;
+}
+#confirme.active{
+    left: 50%;
+    margin-top: -23%;
+    opacity: 1;
+    transform: translate(-50%,-50%) scale(1);
 }
 
-.confirme{
+#confirme .btn-fermer{
     position: absolute;
-    padding: 15px 60px;
-    margin-left: 45%;
-    margin-top: -10%;
-}
-
-.confirme:hover{
-    background: linear-gradient(to right,#eddebf, #890008);
-}
-
-.recu{
-    display: none;
-    position: absolute;
-    width: 860px;
-    background: linear-gradient(150deg, #eddebf, #1c4055)!important;
-    height: 480px;
-    left: 250px;
-    top: 230px;
-    border-radius: 20px;
-    box-shadow: 0px 0px 2px 3px rgba(0, 0, 0, 0.096);
-    z-index: 3;
-}
-
-.recu h3{
+    top: 20px;
+    right: 30px;
+    width: 30px;
+    height: 30px;
+    background: rgba(136, 136, 136, 0.479);
+    color: #eee;
     text-align: center;
-    padding-top: 220px;
+    font-size: 25px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+#confirme .recu{
+    position: absolute;
+    left: 40%;
+    top: 50%;
+}
+#confirme .recu h3{
     text-transform: uppercase;
 }
 
-label{
-    font-size: 28px;
-    cursor: progress;
-}
-
-input[type="checkbox"]{
-    display: none;
-}
-#show:checked ~ .cadre{
-    z-index: 0;
-}
-#show:checked ~.fond,.recu{
-    display: block;
-}
-#show:checked ~ .confirme{
-    z-index: -1;
-}
- */
-
+/*.cadre{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    opacity: 0;
+    transform: translate(-50%,-50%) scale(1.25);
+    width: 380px;
+    height: 100%;
+    padding: 20px 30px;
+    background: #fff;
+    box-shadow: 2px 2px 5px 5px rgba(0,0,0,0.15);
+    border-radius: 10px;
+    transition: top 0ms ease-in-out 200ms,
+                opacity 200ms ease-in-out 0ms,
+                transform 20ms ease-in-out 0ms;
+}*/
 
 /*---------------Fin checbox------------------*/
 
