--- a/CSS/game.css
+++ b/CSS/game.css
@@ -29,6 +29,25 @@ header{
     height: 130vh;
 }
 
+.intro-game {
+    display: flex;
+    align-items: center;
+    height: 90vh;
+}
+
+.texte-menu-game{
+    margin-left: 8%;
+
+}
+
+.intro-game .texte-menu-game p{
+    text-transform: uppercase;
+    font-family:'rajdhani bold';
+    color: wheat;
+    font-size: 52px;
+    align-items: center;
+}
+
 
 /* ----------------------Game style----------------- */
 
@@ -83,9 +102,10 @@ header{
     top: 100%;
     width: 86%;
     left: 50%;
+    height: 100vh;
     transform: translate(-50%,50%);
     margin: 0 auto;
-    background: greenyellow;
+    background: rgb(0, 0, 0);
 }
 /* ----------------Style numéro question--------- */
 .jeux .num-ordre{
@@ -101,7 +121,6 @@ header{
 
 .jeux .contenu-jeux{
     display: flex;
-    background: orangered;
     width: 60%;
     margin: 0 auto;
     margin-top: 10%;
@@ -109,32 +128,54 @@ header{
 
 .jeux .question{
     text-align: left;
-    font-family:'rajdhani medium';
-    background: red;
     width: 90%;
     margin: 0 auto;
 }
 
 /* --------------- taille question----------------*/
 
-.jeux .question p{
-    font-size: 25px;
-}
-
-.question-jeux {
-    display: block;
-}
-
-.question-jeux .reponse{
+.input-quiz .quiz{
     background: rgb(138, 138, 138);
-    margin-top: 10px;
-    height: 40px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 8px 0;
+    margin-top: 5px;
 }
 
-.question-jeux .reponse input[type="checkbox"]{
+.input-quiz .quiz label{
+    display: block;
+    width: 100%;
+    color: #fff;
+    text-transform: capitalize;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.input-quiz .quiz .checkbox{
+    position: relative;
+    width: 22px;
+    height: 22px;
+}
+
+/*.question-jeux .reponse input[type="checkbox"]{
     appearance: none;
     -webkit-appearence: none;
     height: 20px;
     width: 20px;
-    background-color: red;
+    background-color: red; 
+    border-radius: 50px;
+    border: 1px solid black;
+    margin-top: 1%;
 }
+
+.question-jeux .reponse label{
+    padding-top: -12%;
+}
+
+
+.question-jeux .reponse input[type="checkbox"]:checked{
+    background-color: rgb(60, 255, 0);
+    border-radius: 50px;
+    border: 1px solid black;
+}*/
